[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hn-watch"
version = "0.1.1"
description = "Watch a URL for new comments and likes with cross-platform desktop notifications."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "HN-Watch" }
]
dependencies = [
  "requests>=2.31.0",
]
keywords = ["cli", "watcher", "notifications", "scraping", "hacker-news"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
hn-watch = "hn_watch.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["hn_watch*"]
